Add RabbitMQ Dependency